@@ -13,10 +13,15 @@
  *                                                                         *
  ***************************************************************************/
 
+/* QT INCLUDES */
+#include <qlabel.h>
+#include <qstringlist.h>
+
 /* KDE INCLUDES */
 #include <kcombobox.h>
 #include <kglobal.h>
 #include <kiconloader.h>
+#include <klistbox.h>
 #include <klineedit.h>
 #include <klocale.h>
 #include <kpushbutton.h>
@@ -24,7 +29,6 @@
 
 /* OTHER INCLUDES */ 
 #include "functionsimpl.h"
-#include "specials.h"
 
  
 FunctionsDialog::FunctionsDialog(QWidget* a_parent, char* a_name, bool a_modal)
@@ -35,7 +39,7 @@ FunctionsDialog::FunctionsDialog(QWidget* a_parent, char* a_name, bool a_modal)
   
   groupComboBox->insertStringList(SpecialInformation::groups());
   connect(groupComboBox, SIGNAL(activated(int)), SLOT(groupChanged(int)));
-  connect(functionComboBox, SIGNAL(activated(int)), SLOT(functionChanged(int)));
+  connect(functionListBox, SIGNAL(highlighted(int)), SLOT(functionChanged(int)));
   connect(copyButton, SIGNAL(clicked()), SLOT(copyText()));
   connect(clearButton, SIGNAL(clicked()), insertedText, SLOT(clear()));
   groupComboBox->setCurrentItem(0);
@@ -54,40 +58,43 @@ QString FunctionsDialog::functionText() const
 QString FunctionsDialog::currentFunctionText()
 {
   if (groupComboBox->currentText() == "Kommander")
-    return QString("%1()").arg(functionComboBox->currentText());
+    return QString("%1(%2)").arg(functionListBox->currentText()).arg(params());
   else if (groupComboBox->currentText() == "DCOP")
-    return QString("@Widget.%1()").arg(functionComboBox->currentText());
+    return QString("@%1.%2(%3)").arg(widgetComboBox->currentText().section(' ', 0, 0))
+      .arg(functionListBox->currentText()).arg(params());
   else 
-    return QString("@%1.%2()").arg(groupComboBox->currentText())
-      .arg(functionComboBox->currentText());
+    return QString("@%1.%2(%3)").arg(groupComboBox->currentText())
+      .arg(functionListBox->currentText()).arg(params());
 }
 
 void FunctionsDialog::groupChanged(int index)
 {
-  functionComboBox->clear();
-  functionComboBox->insertStringList(SpecialInformation::functions(groupComboBox->text(index)));
-  functionComboBox->setCurrentItem(0);
-  functionChanged(functionComboBox->currentItem());
+  functionListBox->clear();
+  functionListBox->insertStringList(SpecialInformation::functions(groupComboBox->text(index)));
+  functionListBox->setCurrentItem(0);
+  functionChanged(functionListBox->currentItem());
 }
 
 void FunctionsDialog::functionChanged(int)
 {
-  SpecialFunction function = SpecialInformation::functionObject(groupComboBox->currentText(),
-      functionComboBox->currentText());
+  m_function = SpecialInformation::functionObject(groupComboBox->currentText(),
+      functionListBox->currentText());
   QString defArgs;
-  if (function.minArg() < function.maxArg()) 
-     if (!function.minArg())
+  if (m_function.minArg() < m_function.maxArg()) 
+     if (!m_function.minArg())
         defArgs = i18n("<p>Parameters are not obligatory.");
      else    
         defArgs = i18n("<p>Only first argument is obligatory.", 
            "<p>Only first %1 arguments are obligatory.", 
-           function.minArg()).arg(function.minArg());
+           m_function.minArg()).arg(m_function.minArg());
   
   descriptionText->clear();
-  descriptionText->setText(QString("<qt><h1>%1</h1>"
+  descriptionText->setText(QString("<qt><h3>%1</h3>"
     "<p><b>Description:</b> %2"
-    "<p><b>Syntax:</b> <i>%3</i>%4</qt>").arg(function.name()).arg(function.description()).
-    arg(function.longPrototype()).arg(defArgs));
+    "<p><b>Syntax:</b> <i>%3</i>%4</qt>").arg(m_function.name()).arg(m_function.description()).
+    arg(m_function.longPrototype()).arg(defArgs));
+  
+  showParameters();
 }
 
 void FunctionsDialog::copyText()
@@ -96,5 +103,45 @@ void FunctionsDialog::copyText()
   int cursorPos = insertedText->cursorPosition();
   insertedText->insert(text);
   insertedText->setCursorPosition(cursorPos + text.find('(') + 1);
+}
+
+void FunctionsDialog::showParameters()
+{
+  KLineEdit* edits[3] = {arg1Edit, arg2Edit, arg3Edit};
+  QLabel* labels[3] = {argLabel1, argLabel2, argLabel3};
+  int start = (m_function.maxArg() && m_function.argumentName(0) == "widget");
+  
+  widgetComboBox->setShown(start);
+  widgetLabel->setShown(start);
+  if (start)
+  {
+    arg1Edit->setShown(false);
+    argLabel1->setShown(false);
+  }
+  for (int i=start; i<3; i++)
+  {
+    edits[i]->setShown(i<m_function.maxArg());
+    edits[i]->clear();
+    labels[i]->setShown(i<m_function.maxArg());
+    if (i<m_function.maxArg())
+      labels[i]->setText(QString("%1:").arg(m_function.argumentName(i)));
+  }
+}
+
+QString FunctionsDialog::params()
+{
+  KLineEdit* edits[3] = {arg1Edit, arg2Edit, arg3Edit};
+  QStringList pars;
+  for (int i=0; i<3; i++)
+    if (edits[i]->isShown())
+      pars.append(edits[i]->text());
+  return pars.join(", ");
+}
+
+void FunctionsDialog::setWidgetList(const QStringList& list)
+{
+  widgetComboBox->clear();
+  widgetComboBox->insertStringList(list);
+  widgetComboBox->setCurrentItem(0);
 }
 
